feature/1080: 评测链路优化、引入websocket实现实时推送