@@ -10,6 +10,7 @@ import common.enums.Language;
 import common.exception.ServiceException;
 import common.toolkit.FileUtils;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.gzhuoj.common.sdk.convention.result.Result;
 import org.springframework.stereotype.Component;
 
@@ -28,11 +29,12 @@ import static org.gzhuoj.common.sdk.convention.errorcode.BaseErrorCode.JUDGE_PRO
  */
 @Component
 @RequiredArgsConstructor
+@Slf4j
 public class JudgeContext {
     private final ProblemApi problemRemoteService;
     private final LanguageConfigLoader languageConfigLoader;
-
     private final JudgeStrategy judgeStrategy;
+    private final Path basePath = Paths.get("").toAbsolutePath().resolve(PROBLEM_BASE_PATH);
 
     public SubmitDO judge(ProblemRespDTO problemRespDTO, SubmitDO submitDO) {
         LanguageConfig languageConfig = languageConfigLoader
@@ -44,7 +46,7 @@ public class JudgeContext {
             problemRespDTO.setMemoryLimit(problemRespDTO.getMemoryLimit() * 2);
         }
         // 目标文件夹
-        Path targetDirectoryPath = Paths.get("").toAbsolutePath().resolve(PROBLEM_BASE_PATH + "/" + problemRespDTO.getAttach() + "/test_case");
+        Path targetDirectoryPath = basePath.resolve(problemRespDTO.getAttach() + "/test_case");
         // 该题目文件夹如果为空
         if(!FileUtils.isDirectoryExists(targetDirectoryPath.toString())){
             loadProblemTestCase(targetDirectoryPath, submitDO.getProblemNum());
@@ -72,17 +74,17 @@ public class JudgeContext {
             throw new ServiceException(JUDGE_PROBLEM_RESOURCES_NOT_FOUND_ERROR);
         }
         try {
+            // 创建目标目录
             Files.createDirectories(targetDirectoryPath);
-        } catch (IOException e) {
-            throw new RuntimeException(String.format("TestCase文件夹创建失败 Path = %s, ProblemNum = %d", targetDirectoryPath, problemNum),e);
-        }
-        resources.forEach(each -> {
-            Path testCase = targetDirectoryPath.resolve(each.getFileName());
-            try {
-                Files.writeString(testCase, each.getFileContent());
-            } catch (IOException e) {
-                throw new RuntimeException(String.format("TestCase文件创建失败 Path = %s, ProblemNum = %d", targetDirectoryPath, problemNum),e);
+
+            // 写入所有测试用例文件
+            for (ProblemJudgeResourcesRespDTO resource : resources) {
+                Path testCasePath = targetDirectoryPath.resolve(resource.getFileName());
+                Files.write(testCasePath, resource.getFileContent().getBytes());
             }
-        });
+        } catch (IOException e) {
+            log.error("Failed to load problem test cases for problemNum = {}", problemNum, e);
+            throw new RuntimeException("加载测试用例失败", e);
+        }
     }
 }
